parent 3a386543a3dd80e419fd54de7074a159d6cadbea author Jan-Olav Eide <jan.olav.eide@gmail.com> 1645614540 +0100 committer Jan-Olav Eide <jan.olav.eide@gmail.com> 1646037727 +0100 gpgsig -----BEGIN PGP SIGNATURE-----
 iQGzBAABCAAdFiEE9sOZT+p2YNe2m+lC94IdAzXVJRsFAmIcit8ACgkQ94IdAzXV
 JRs3+Qv/bnlRMTlgBfjKzlMoK9jVhz5O91+TzeMv3qV/N+AWDBew3ZIcdmKGNB9B
 fT69/3jJy1OKxC7e9CcIad559c84dHWIUGFUAZCSz50Oy/1UTBSOq/z1xexp/vAl
 Nm5vDLqlEAcouhQKdhZfkolmAZzMikT5DtWbGnulwDprAjChv0GrfSM+lkf/N1ck
 aso9g4s7J3ZL7KglQqnO99LdYlTziT40jmB/9+FUuIHuKFZJppBceP3moLzproSc
 rn+bScHJNHwTJdv5V2NNmozetWJZwGl/X+OfzcDIN2y3ugBGcV8P5GpVCT/GlJsu
 6he8UXKzR/8DJdvSa1zhQkgirJvsCvGcwqKSyJcAzkZz38F9X2TBg/C9tCGwmT/X
 T/A3ftxnXWvvtkN+2/WC/PzVIF0Pj+7CE9axH+jPVwcBc9WEYVWBWdRyZaY//gyM
 Avs8PLYVUHWbBAvzEGh9XC/PswX109HVKOYv9ncCoDwpmqRfpTbdhp4VDnssYJZ1
 4Gcie8pj
 =VvXI
 -----END PGP SIGNATURE-----

idiomatisk

17

getter for symmetry

apply er bedre

split on first part of host, simplifies config

force build

snap bump

bump version

force build

force

Delete .java-version

install

build(deps): bump nimbus-jose-jwt from 9.19 to 9.20

Bumps [nimbus-jose-jwt](https://bitbucket.org/connect2id/nimbus-jose-jwt) from 9.19 to 9.20.
- [Changelog](https://bitbucket.org/connect2id/nimbus-jose-jwt/src/master/CHANGELOG.txt)
- [Commits](https://bitbucket.org/connect2id/nimbus-jose-jwt/branches/compare/9.20..9.19)

---
updated-dependencies:
- dependency-name: com.nimbusds:nimbus-jose-jwt
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

Update build-master.yml

Update pom.xml

Update pom.xml

Update test-pull-requests.yml

Update test-pull-requests.yml

force

Update test-pull-requests.yml

Update test-pull-requests.yml

Update build-master.yml

Update pom.xml

Update test-pull-requests.yml

force

Update test-pull-requests.yml

force

Update test-pull-requests.yml

force

Update test-pull-requests.yml

optimize imports

sonarcloud

warn when p