@@ -1,19 +1,14 @@
 package no.nav.security.token.support.core.validation;
 
 import no.nav.security.token.support.core.configuration.MultiIssuerConfiguration;
-import no.nav.security.token.support.core.jwt.JwtToken;
 import no.nav.security.token.support.core.http.HttpRequest;
+import no.nav.security.token.support.core.jwt.JwtToken;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
-
-import static java.util.stream.Collectors.*;
-
 public class JwtTokenRetriever {
 
     private static final Logger LOG = LoggerFactory.getLogger(JwtTokenRetriever.class);
@@ -25,12 +20,12 @@ public class JwtTokenRetriever {
         return Stream.concat(
             getTokensFromHeader(config, request).stream(),
             getTokensFromCookies(config, request).stream())
-            .collect(toList());
+            .toList();
     }
 
     private static List<JwtToken> getTokensFromHeader(MultiIssuerConfiguration config, HttpRequest request) {
         try {
-            LOG.debug("checking authorization header for tokens");
+            LOG.debug("Checking authorization header for tokens");
             var authorization = request.getHeader(AUTHORIZATION_HEADER);
             if (authorization != null) {
                 String[] headerValues = authorization.split(",");
@@ -38,11 +33,11 @@ public class JwtTokenRetriever {
                     .stream()
                     .map(JwtToken::new)
                     .filter(jwtToken -> config.getIssuer(jwtToken.getIssuer()).isPresent())
-                    .collect(toList());
+                    .toList();
             }
-            LOG.debug("no tokens found in authorization header");
+            LOG.debug("No tokens found in authorization header");
         } catch (Exception e) {
-            LOG.warn("received exception when attempting to extract and parse token from Authorization header", e);
+            LOG.warn("Received exception when attempting to extract and parse token from Authorization header", e);
         }
         return List.of();
     }
@@ -53,7 +48,7 @@ public class JwtTokenRetriever {
             return cookies.stream()
                 .filter(nameValue -> containsCookieName(config, nameValue.getName()))
                 .map(nameValue -> new JwtToken(nameValue.getValue()))
-                .collect(toList());
+                .toList();
         } catch (Exception e) {
             LOG.warn("received exception when attempting to extract and parse token from cookie", e);
             return List.of();
@@ -71,6 +66,6 @@ public class JwtTokenRetriever {
             .filter(pair -> pair.length == 2)
             .filter(pair -> pair[0].trim().equalsIgnoreCase(BEARER))
             .map(pair -> pair[1].trim())
-            .collect(toList());
+            .toList();
     }
 }
